fix : html 파일 경로 밖으로 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     ports:
       - "3000:80"
     volumes:
-      - ./frontend:/usr/share/nginx:ro
+      - ./frontend:/usr/share/nginx/html:ro
     depends_on:
       - web
 
