--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 FROM nginx:alpine
 
 # Copy static files
-# COPY . /usr/share/nginx
+# COPY . /usr/share/nginx/html
 COPY ./config/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
