--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -3,13 +3,10 @@ server {
 
     server_name localhost;
     root /usr/share/nginx/html;
-
-    location ~ .css {
-        add_header Content-Type text/css;
-    }
+    index login.html;
 
     location / {
-        try_files $uri $uri/ index.html;
+        try_files $uri $uri/ =404;
     }
 
     location /api/ {
