--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -3,7 +3,7 @@ server {
 
     server_name localhost;
     root /usr/share/nginx/html;
-    index login.html;
+    index index.html;
 
     location / {
         try_files $uri $uri/ =404;
