edit: django cors 관련 세팅, urls.py 슬래쉬 제거

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,4 @@ djangorestframework
 psycopg2-binary
 djangorestframework-jwt
 django-cors-headers
-djangorestframework-simplejwt
-django-allauth
-django-rest-auth
+requests
