feat : 임시 api추가 : http://127.0.0.1:8000/userinfo/get_user_info/?intra_id=soohlee

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,4 +15,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy project
 COPY . /app/
 
+RUN python manage.py makemigrations userinfo_app
 RUN python manage.py migrate
+# RUN python manage.py migrate userinfo_app 0001
