--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,9 +17,10 @@ COPY . /app/
 RUN chmod +x /app/scripts/initdjango.sh
 
 RUN apt-get update && apt-get install -y postgresql-client \
-    dumb-init 
+    dumb-init \
+    procps
 RUN pip install psycopg2-binary
 
-# RUN python manage.py migrate
-# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
-CMD ["sh", "/app/scripts/initdjango.sh"]
+ENTRYPOINT ["/usr/bin/dumb-init","--","/app/scripts/initdjango.sh"]
+
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
