--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -81,9 +81,35 @@ http {
     # Sets the path, format, and configuration for a buffered log write.
     access_log /var/log/nginx/access.log main;
 
+    # server {
+    #     listen 8000 ssl;
+    #     listen [::]:8000 ssl;
+
+    #     server_name localhost;
+    #     ssl_certificate /ssl_files/django.crt;
+    #     ssl_certificate_key /ssl_files/django.key;
+    #     ssl_session_timeout 10m;
+    #     ssl_prefer_server_ciphers on;
+    #     ssl_protocols TLSv1.3;
+    #     client_max_body_size 32m;
+    #     error_page 500 502 503 504 /50x.html;
+
+    #     location /oauth {
+    #         proxy_pass https://web:8000;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+
+    #         add_header 'Access-Control-Allow-Origin' '*';
+    #         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+    #         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+    #     }
+    # }
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
+
         server_name localhost;
         root /usr/share/nginx/html;
         ssl_certificate /ssl_files/my_ssl.crt;
@@ -104,9 +130,10 @@ http {
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
         }
 
-        location /oauth {
+         location /oauth {
             proxy_pass http://web:8000;
-            proxy_set_header Host $host;
+            # proxy_redirect off;
+            proxy_set_header Host $host:$server_port;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
