--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     build: ./backend
     volumes:
       - ./backend:/app
+      - sslfiles:/ssl_files
     ports:
       - "8000:8000"
     depends_on:
@@ -32,6 +33,7 @@ services:
       - "3000:443"
     volumes:
       - ./frontend:/usr/share/nginx/html:ro
+      - sslfiles:/ssl_files
     depends_on:
       - web
     networks:
@@ -40,6 +42,7 @@ services:
       - .env
 
 volumes:
+  sslfiles:
   postgres_data:
   frontend:
     name: frontend
